# vtune_toturial_matrix_mul

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  a.out  asd.cpp
.github/workflows/: install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
CPM_modules/: FindFormat.cmake.cmake  FindPackageProject.cmake.cmake  Findcxxopts.cmake  Finddoctest.cmake  Findfmt.cmake  Findm.css.cmake
cheet_sheet/: ctags.txt
documentation/: CMakeLists.txt  Doxyfile
include/: macros.h  matrix_multiplication.h  prim.h
install/include/Graph-1.0/: graph.h  graph_utility.h  graph_utility.tpp  prim.tpp  unordered_map_weighted_adj_list.tpp  vector_weighted_adj_list.tpp
install/include/Graph-1.0/graph/: version.h
install/include/Matrix_multiplication-1.0/: .matrix_multiplication.h.swp  macros.h
install/include/Matrix_multiplication-1.0/matrix_multiplication/: version.h
install/lib/cmake/Graph-1.0/: GraphConfig.cmake  GraphTargets.cmake
install/lib/cmake/Matrix_multiplication-1.0/: Matrix_multiplicationConfig.cmake  Matrix_multiplicationTargets.cmake
install/tests/: Matrix_multiplication_Tests  Matrix_multiplication_Tests_1024  Matrix_multiplication_Tests_2048  Matrix_multiplication_Tests_2048_option_optmize  Matrix_multiplication_Tests_512
scripts/: oneAPI_ml_load.sh  run_cmake.sh  run_cmake_test.sh  tmp.sh  vtune_run.sh
source/: simulation.cpp  v1_cachemiss.c  v2_loop.c  v3_omp.c  v4_tiled.c  v5_cuda.cu
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: matrix_mul.cpp  test_prim1.cpp
vtune_result/Matrix_multiplication_Tests_collect_performance-snapshot/: Matrix_multiplication_Tests_collect_performance-snapshot.vtune
vtune_result/Matrix_multiplication_Tests_collect_performance-snapshot/config/: collection.cfg  context_values.cfg  log.cfg  runsa.options
vtune_result/Matrix_multiplication_Tests_collect_performance-snapshot/data.0/: emon.0.bwhist  emon.0.emon  emon.0.emon_cpu  emon.0.emon_events  emon.0.emon_version  sep.events  systemcollector-176289-hlajungo-Predator-PH317-56.sc
vtune_result/Matrix_multiplication_Tests_collect_performance-snapshot/sqlite-db/: dicer.db  grouper.metadata
vtune_result/Matrix_multiplication_Tests_collect_performance-snapshot/sqlite-db/_cache_grouper_data4_bandwidth_global_grouper/: container.metadata
vtune_result/Matrix_multiplication_Tests_collect_performance-snapshot/sqlite-db/_cache_grouper_data4_bandwidth_global_grouper/grouper/: 0
vtune_result/Matrix_multiplication_Tests_collect_performance-snapshot/sqlite-db/_cache_grouper_data4_dd_package/grouper/: 0
vtune_result/Matrix_multiplication_Tests_collect_performance-snapshot/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
vtune_result/Matrix_multiplication_Tests_collect_performance-snapshot/sqlite-db/_cache_grouper_data4_dd_thread/grouper/: 0
vtune_result/Matrix_multiplication_Tests_collect_performance-snapshot/sqlite-db/_cache_grouper_data4_global_data_grouper/grouper/: 0
vtune_result/Matrix_multiplication_Tests_collect_performance-snapshot/sqlite-db/_cache_grouper_data4_global_time_interval_metrics/grouper/: 0
vtune_result/Matrix_multiplication_Tests_collect_performance-snapshot/sqlite-db/pmu_data/: container.metadata
vtune_result/Matrix_multiplication_Tests_collect_performance-snapshot/sqlite-db/pmu_data/end_tsc/: 0  mapping.xml
vtune_result/Matrix_multiplication_Tests_collect_performance-snapshot/sqlite-db/timelinedb/: directory.xml
vtune_result/Matrix_multiplication_Tests_collect_performance-snapshot/sqlite-db/timelinedb/dbint-1238386680/aggregated/0/: 0  mapping.xml
vtune_result/Matrix_multiplication_Tests_collect_performance-snapshot/sqlite-db/timelinedb/dbint-920697981/aggregated/0/: 0  mapping.xml
